# tracking-prototype

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
examples/: example-commands.txt  invalid-commands.txt
src/: driver.py
src/tracker/: basemodel.py  datamodel.py  datastore.py  errors.py
tests/: conftest.py
tests/tracker/: test_datamodel.py
